disable cursor on touch screens

--- a/index.html
+++ b/index.html
@@ -81,18 +81,18 @@
         </nav>
 
         <!-- content goes here -->
-        <div class="py-32 text-center animate-this cursor-none mainContent" data-barba="container" data-barba-namespace="home">
-            <h2 class="font-extrabold text-6xl py-5 lg:text-8xl text-white md:text-6xl">Hi! I'm Milind Goel</h2>
-            <p class="text-xl text-white py-8 px-3 md:text-2xl">a Web Developer, UI/UX Designer based in India
+        <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="home">
+            <h2 class="font-extrabold text-6xl py-5 lg:text-8xl text-white md:text-6xl mainContent">Hi! I'm Milind Goel</h2>
+            <p class="text-xl text-white py-8 px-3 md:text-2xl mainContent">a Web Developer, UI/UX Designer based in India
             </p>
 
             <a href="contact">
                 <button
-                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">CONNECT
+                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700 mainContent">CONNECT
                     WITH ME</button>
             </a>
 
-            <p class="text-slate-300 footer mt-20">Made with <span class="text-red-600">❤</span> by <span
+            <p class="text-slate-300 footer mt-20 mainContent">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
         </div>
 
