--- a/skills.html
+++ b/skills.html
@@ -63,15 +63,15 @@
                 class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-350">
 
                 <li class="mx-4 my-6 md:my-0 md:mx-0">
-                    <a href="works.html"
+                    <a href="works"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
-                    <a href="skills.html"
+                    <a href="skills"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
-                    <a href="contact.html"
+                    <a href="contact"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
@@ -82,14 +82,14 @@
         </nav>
 
         <!-- content goes here -->
-        <div class="py-32 text-center cursor-none mainContent" data-barba="container" data-barba-namespace="skills">
-            <h2 class="font-extrabold text-4xl py-1 text-white">Skills</h2>
+        <div class="py-32 text-center cursor-none" data-barba="container" data-barba-namespace="skills">
+            <h2 class="font-extrabold text-4xl py-1 text-white mainContent">Skills</h2>
 
             <div class="flex justify-center min-h-screen">
 
                 <div class="grid grid-rows-5 gap-2 lg:grid-col-3 lg:grid-rows-2 lg:grid-flow-col lg:gap-5 lg:ml-20">
 
-                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Web Designing</h2>
                         <p class="text-lg text-slate-200">Prototyping & UI/UX Designing</p>
@@ -101,7 +101,7 @@
 
 
                     <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Object Oriented Programming</h2>
                         <p class="text-lg text-slate-200">C/C++</p>
@@ -111,7 +111,7 @@
                     </div>
 
                     <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Web Development</h2>
                         <p class="text-lg text-slate-200">HTML/CSS/JS</p>
@@ -121,7 +121,7 @@
                     </div>
 
                     <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Video Editing</h2>
                         <p class="text-lg text-slate-200">Quality video editing using modern softwares</p>
@@ -131,7 +131,7 @@
                     </div>
 
                     <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Database language</h2>
                         <p class="text-lg text-slate-200">PL-SQL</p>
@@ -143,7 +143,7 @@
 
             </div>
 
-            <p class="text-slate-300 footer mt-24">Made with <span class="text-red-600">❤</span> by <span
+            <p class="text-slate-300 footer mt-24 mainContent">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
         </div>
     </div>
