--- a/works.html
+++ b/works.html
@@ -81,7 +81,7 @@
         </nav>
 
         <!-- content goes here -->
-        <div class="py-32 text-center animate-this cursor-none mainContent" data-barba="container" data-barba-namespace="works">
+        <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="works">
             <h2 class="font-extrabold text-2xl py-5 text-white md:text-4xl">Recents Works & Contributions</h2>
 
             <div class="flex justify-center min-h-screen">
@@ -90,7 +90,7 @@
                     <a href="http://abhishekgoelandassociates.com" target="blank">
 
                         <div
-                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Abhishek Goel & Associates</h2>
                             <p class="text-lg text-slate-200">Website for Chartered Accountant firm</p>
@@ -102,7 +102,7 @@
                     <a href="https://github.com/RetroMusicPlayer" target="blank">
 
                         <div
-                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Retro Music Player</h2>
                             <p class="text-lg text-slate-200">Member and contributor of Retro Music Player, a material
@@ -113,7 +113,7 @@
 
                     <a href="http://mwsretail.in" target="blank">
                         <div
-                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Milind Webcomm Services</h2>
                             <p class="text-lg text-slate-200">Website for Web Designing and E-Commerce operators</p>
@@ -128,7 +128,7 @@
                     <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="blank">
 
                         <div
-                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Personal Portfolio</h2>
                             <p class="text-lg text-slate-200">Designed personal Portfolio website for myself</p>
@@ -144,11 +144,11 @@
 
             <a href="https://github.com/milindgoel15?tab=repositories">
                 <button
-                    class="py-6 my-20 px-7 text-xl md:py-5 md:px-7 md:my-8 xl:my-20 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">Other
+                    class="py-6 my-20 px-7 text-xl md:py-5 md:px-7 md:my-8 xl:my-20 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700 mainContent">Other
                     Contributions</button>
             </a>
 
-            <p class="text-slate-300 footer mt-12">Made with <span class="text-red-600">❤</span> by <span
+            <p class="text-slate-300 footer mt-12 mainContent">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
 
         </div>
