--- a/contact.html
+++ b/contact.html
@@ -79,8 +79,8 @@
             </ul>
         </nav>
 
-        <div class="py-32 text-center animate-this cursor-none mainContent" data-barba="container" data-barba-namespace="contact">
-            <h2 class="font-extrabold text-4xl py-8 text-white">Connect with me</h2>
+        <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="contact">
+            <h2 class="font-extrabold text-4xl py-8 text-white mainContent">Connect with me</h2>
 
             <div class="flex justify-center">
 
@@ -88,7 +88,7 @@
                     <a href="http://linkedin.com/in/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <div class="md:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -113,7 +113,7 @@
                     <a href="mailto:milindgoel15@gmail.com" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <div class="md:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff" viewBox="0 0 272 194">
@@ -141,7 +141,7 @@
                     <a href="http://github.com/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <div class="md:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -166,7 +166,7 @@
                     <a href="http://telegram.me/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <div class="md:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -190,7 +190,7 @@
                     <a href="http://youtube.com/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <div class="md:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -215,7 +215,7 @@
                     <a href="http://instagram.com/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
 
                             <div class="md:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -239,7 +239,7 @@
 
             </div>
 
-            <p class="text-slate-300 footer mt-24">Made with <span class="text-red-600">❤</span> by <span
+            <p class="text-slate-300 footer mt-24 mainContent">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
 
         </div>
