add margin to index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="container h-min">
         <!-- navbar goes here -->
-        <nav class=" max-w-7xl mx-auto px-8 md:flex md:items-center md:justify-between">
+        <nav class=" max-w-7xl mx-auto px-8 md:mx-8 lg:mx-auto md:flex md:items-center md:justify-between">
             <div class="flex justify-between items-center h-24">
                 <a href="https://milindgoel15.github.io">
                     <svg height="40px" width="40px" class="logoHover" xmlns="http://www.w3.org/2000/svg"
@@ -82,8 +82,8 @@
 
         <!-- content goes here -->
         <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="home">
-            <h2 class="font-extrabold text-6xl py-5 lg:text-8xl text-white md:text-6xl mainContent">Hi! I'm Milind Goel</h2>
-            <p class="text-xl text-white py-8 px-3 md:text-2xl mainContent">a Web Developer, UI/UX Designer based in India
+            <h2 class="font-extrabold text-6xl py-5 lg:mx-80 lg:text-8xl text-white md:text-6xl mainContent">Hi! I'm Milind Goel</h2>
+            <p class="text-xl text-white py-8 px-3 lg:mx-110 md:text-2xl mainContent">a Web Developer, UI/UX Designer based in India
             </p>
 
             <a href="contact">
