--- a/works.html
+++ b/works.html
@@ -117,7 +117,7 @@
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Milind Webcomm Services</h2>
                             <p class="text-lg text-slate-200">Website for Web Designing and E-Commerce operators</p>
-                            <p class="text-lg text-slate-200">Written with HTML5, SCSS, Bootstrap</p>
+                            <p class="text-lg text-slate-200">Written with TailwindCSS & AlpineJS</p>
 
                         </div>
 
