--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="./styles/tailwindoutput.css">
+    <script defer src="https://unpkg.com/alpinejs@3.8.1/dist/cdn.min.js"></script>
 
     <!-- favicons -->
     <link rel="icon" type="image/png" sizes="512x512" href="favicons/android-chrome-512x512.png">
@@ -28,14 +29,14 @@
 
 </head>
 
-<body data-barba="wrapper">
+<body data-barba="wrapper" x-data>
     <div class="load-container">
         <div class="loading-screen"></div>
     </div>
 
     <div class="container h-min">
         <!-- navbar goes here -->
-        <nav class=" max-w-7xl mx-auto px-8 md:mx-8 lg:mx-auto md:flex md:items-center md:justify-between">
+        <nav class="max-w-7xl mx-auto px-8 md:mx-8 lg:mx-auto md:flex md:items-center md:justify-between" x-data="{ navBar: false }">
             <div class="flex justify-between items-center h-24">
                 <a href="https://milindgoel15.github.io">
                     <svg height="40px" width="40px" class="logoHover" xmlns="http://www.w3.org/2000/svg"
@@ -49,7 +50,7 @@
                     </svg>
                 </a>
 
-                <button class="md:hidden text-white focus:outline-none" onclick="Menu(this)">
+                <button class="md:hidden text-white focus:outline-none" @click="navBar = !navBar">
                     <svg width="26" height="18" viewBox="0 0 26 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M13 17.5H0.25V14.6667H13V17.5ZM25.75 10.4167H0.25V7.58333H25.75V10.4167ZM25.75 3.33333H13V0.5H25.75V3.33333Z"
@@ -58,9 +59,8 @@
                 </button>
             </div>
 
-            <ul
-                class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-350">
-
+            <ul class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 top-[-400px] transition-all ease-in duration-350"
+                :class="{'top-[95px]': navBar, 'opacity-0': !navBar }">
                 <li class="mx-4 my-6 md:my-0 md:mx-0">
                     <a href="works"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Works</a>
@@ -82,38 +82,32 @@
 
         <!-- content goes here -->
         <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="home">
-            <h2 class="font-extrabold text-6xl py-5 lg:mx-80 lg:text-8xl text-white md:text-6xl mainContent">Hi! I'm Milind Goel</h2>
-            <p class="text-xl text-white py-8 px-3 lg:mx-110 md:text-2xl mainContent">a Web Developer, UI/UX Designer based in India
+            <h2 class="font-extrabold text-6xl py-5 lg:mx-80 lg:text-8xl text-white md:text-6xl mainContent">
+                Hi! I'm Milind Goel
+            </h2>
+            <p class="text-xl text-white py-8 px-3 lg:mx-110 md:text-2xl mainContent">
+                a Web Developer, UI/UX Designer based in India
             </p>
 
             <a href="contact">
                 <button
-                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700 mainContent">CONNECT
-                    WITH ME</button>
+                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700 mainContent">
+                    CONNECT WITH ME
+                </button>
             </a>
 
-            <p class="text-slate-300 footer mt-20 mainContent">Made with <span class="text-red-600">❤</span> by <span
-                    class="text-blue-600">Milind Goel</span> </p>
+            <p class="text-slate-300 footer mt-20 mainContent">
+                Made with <span class="text-red-600">❤</span> by
+                <span class="text-blue-600">Milind Goel</span>
+            </p>
         </div>
-
     </div>
 
     <div class="cursor-dot-outline"></div>
     <div class="cursor-dot"></div>
 
-    <script>
-        function Menu(e) {
-            let list = document.querySelector('ul');
-            e.name === 'menu' ? (e.name = "close",
-                list.classList.add('top-[95px]'),
-                list.classList.add('opacity-100')) : (e.name = "menu",
-                    list.classList.remove('top-[95px]'),
-                    list.classList.remove('opacity-100'))
-        }
-    </script>
     <script src="./js/snowflakes.js"></script>
     <script src="./js/kursor.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="./js/barba.js"></script>
