--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
     <script src="./js/snowflakes.js"></script>
     <script src="./js/kursor.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="./js/barba.js"></script>
